--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -11,20 +11,20 @@
   --ifm-color-primary-darker: #277148;
   --ifm-color-primary-darkest: #205d3b;
   --ifm-color-primary-light: #33925d;
-  --ifm-color-primary-lighter: #359962;
+  --ifm-color-primary-lighter: #48cab4;
   --ifm-color-primary-lightest: #3cad6e;
-  --ifm-code-font-size: 95%;
+  --ifm-code-font-size: 90%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme='dark'] {
-  --ifm-color-primary: #25c2a0;
-  --ifm-color-primary-dark: #21af90;
-  --ifm-color-primary-darker: #1fa588;
-  --ifm-color-primary-darkest: #1a8870;
-  --ifm-color-primary-light: #29d5b0;
-  --ifm-color-primary-lighter: #32d8b4;
-  --ifm-color-primary-lightest: #4fddbf;
+  --ifm-color-primary: #37fcab;
+  --ifm-color-primary-dark: #19fc9e;
+  --ifm-color-primary-darker: #0afb98;
+  --ifm-color-primary-darkest: #03d47e;
+  --ifm-color-primary-light: #55fcb8;
+  --ifm-color-primary-lighter: #64fdbe;
+  --ifm-color-primary-lightest: #92fdd1;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
