--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -1,3 +1,34 @@
+/**
+ * Any CSS included here will be global. The classic template
+ * bundles Infima by default. Infima is a CSS framework designed to
+ * work well for content-centric websites.
+ */
+
+/* You can override the default Infima variables here. */
+:root {
+  --ifm-color-primary: #2e8555;
+  --ifm-color-primary-dark: #29784c;
+  --ifm-color-primary-darker: #277148;
+  --ifm-color-primary-darkest: #205d3b;
+  --ifm-color-primary-light: #33925d;
+  --ifm-color-primary-lighter: #48cab4;
+  --ifm-color-primary-lightest: #3cad6e;
+  --ifm-code-font-size: 90%;
+  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
+}
+
+/* For readability concerns, you should choose a lighter palette in dark mode. */
+[data-theme='dark'] {
+  --ifm-color-primary: #37fcab;
+  --ifm-color-primary-dark: #19fc9e;
+  --ifm-color-primary-darker: #0afb98;
+  --ifm-color-primary-darkest: #03d47e;
+  --ifm-color-primary-light: #55fcb8;
+  --ifm-color-primary-lighter: #64fdbe;
+  --ifm-color-primary-lightest: #92fdd1;
+  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
+}
+
 
 /* Custom styles for tabs */
 .tabs {
